<resources>
    <string name="app_name">Biblioloft</string>

    <!-- Strings Login -->
    <string name="lo_name">BIBLIOLOFT</string>
    <string name="nombre_lo">Usuario</string>
    <string name="password_text">Contraseña</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="lo_bienvenido">¡Comienza a llevar el control de tu lectura!</string>
    <string name="lo_spinner_1">Usuario</string>
    <string name="lo_spinner_2">Administrador</string>

    <!-- Strings Register -->
    <string name="re_registrate">Regístrate</string>
    <string name="home_text">Biblioteca</string>
    <string name="text_ProgramarSesion">Programar sesión</string>
    <string name="profile_text">Perfil</string>
    <string name="setting_text">Configuración</string>
    <string name="confPassword_text">Confirmar contraseña</string>
    <string name="cuentaNueva">Crear cuenta</string>
    <string name="usuario_text">Nombre de usuario</string>
    <string name="confirmar_text">Confirmar</string>

    <!-- Strings Profile -->
    <string name="nombre_text">Nombre de usuario</string>
    <string name="nombrecompleto_text">Nombre completo</string>
    <string name="mail_text">Correo electronico</string>
    <string name="Edad_text">Edad</string>
    <string name="Celular_text">Celular</string>
    <string name="actualizar_text">Actualizar datos</string>

    <!-- Strings settings -->
    <string name="ModificarPerfil">Modificar Perfil</string>
    <string name="editarDatosString">Editar los datos del Perfil</string>
    <string name="guardarCambiosString">Guardar cambios</string>
    <string name="TemaOscuro">TEMA OSCURO</string>
    <string name="Español_English">ESPAÑOL/ENGLISH</string>

    <!-- Strings user -->
    <string name="programar_hora">Hora: </string>
    <string name="programar_cambiar_hora">Seleccionar hora</string>
    <string name="home_BuscarMas">Buscar mas</string>

    <!-- Strings admin -->
    <string name="agregarLibro">Agregar Libro</string>
    <string name="datosLibro">Datos del libro</string>
    <string name="nombreLibro">Nombre del libro</string>
    <string name="autorLibro">Nombre del autor</string>
    <string name="descripcionLibro">Descripción del libro</string>
    <string name="paginasLibro">Páginas del libro</string>
    <string name="stringCientificos">Cientificos</string>
    <string name="stringLiteratura">Literatura</string>
    <string name="stringAventura">Aventura</string>
    <string name="stringTerror">Terror</string>
    <string name="stringMisterio">Misterio</string>
    <string name="stringRecreativos">Recreativos</string>
    <string name="stringPoeticos">Poeticos</string>
    <string name="stringRomanticos">Romanticos</string>
    <string name="stringFiccion">Ficción</string>
    <string name="stringInfantiles">Infantiles</string>
    <string name="stringRegistro">Registro de libros</string>
    <string name="stringError">Error</string>
    <string name="stringCambiosGuardadosCorrectamente">Cambios guardados correctamente</string>
    <string name="stringGuardarCambios">Guardar cambios</string>

    <string name="changed_to">Notificación cambiada a las %s</string>
    <string name="new_notification">Nueva notificación</string>
    <string name="title_notification">Biblioloft</string>

</resources>