<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentsAdmin.HomeAdminFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/stringRegistro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/imgCientificos"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/stringCientificos"
            android:layout_marginTop="100dp"
            android:background="@drawable/input_button"
            android:drawableStart="@drawable/ic_cientificos_90"
            android:paddingStart="20dp"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />


        <Button
            android:id="@+id/imgLiteratura"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/stringLiteratura"
            android:background="@drawable/input_button"
            android:drawableStart="@drawable/ic_literatura_90"
            android:paddingStart="20dp"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCientificos" />


        <Button
            android:id="@+id/imgAventura"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/stringAventura"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_button"
            android:drawableStart="@drawable/ic_aventura_90"
            android:paddingStart="20dp"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLiteratura" />

        <Button
            android:id="@+id/imgTerror"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/stringTerror"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_button"
            android:drawableStart="@drawable/ic_terror_90"
            android:paddingStart="20dp"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAventura" />


        <Button
            android:id="@+id/imgMisterio"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/stringMisterio"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_button"
            android:drawableStart="@drawable/ic_misterio_90"
            android:paddingStart="20dp"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgTerror" />


        <Button
            android:id="@+id/imgInfantiles"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/stringInfantiles"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_button"
            android:drawableStart="@drawable/ic_infantiles_90"
            android:paddingStart="20dp"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgMisterio" />

        <Button
            android:id="@+id/imgPoeticos"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/stringPoeticos"
            android:drawableStart="@drawable/ic_poesia_90"
            android:paddingStart="20dp"
            android:textSize="25dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgInfantiles" />


        <Button
            android:id="@+id/imgRomanticos"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/stringRomanticos"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_button"
            android:drawableStart="@drawable/ic_romance_90"
            android:paddingStart="20dp"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPoeticos" />

        <Button
            android:id="@+id/imgFiccion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:text="@string/stringFiccion"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_ficcion_90"
            android:paddingStart="20dp"
            android:textSize="25dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgRomanticos" />
    </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>