<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/datosLibro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datosLibro"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_agregar_libro"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/img_agregar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/datosLibro"/>


                <EditText
                    android:id="@+id/nombreLibro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/nombreLibro"
                    android:textColorHint="@color/light_white"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_agregar_libro"
                    tools:layout_editor_absoluteX="32dp" />


                <EditText
                    android:id="@+id/descripcionLibro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcionLibro"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textColorHint="@color/light_white"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/nombreLibro"
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/paginasLibro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/paginasLibro"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textColorHint="@color/light_white"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/descripcionLibro"
                    tools:layout_editor_absoluteX="0dp" />

                <Button
                    android:id="@+id/btn_añadirLibro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/agregarLibro"
                    android:backgroundTint="@color/btn_cafe"
                    android:textColor="@color/white"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>